// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getThemeJson > with contexts and descriptions 1`] = `
{
  "contexts": {
    "navigation": {
      "tokens": {
        "boxShadow-var": {
          "$value": {
            "dark": "purple",
            "light": "purple",
          },
        },
        "buttonShadow-var": {
          "$value": {
            "dark": "brown",
            "light": "black",
          },
        },
        "lineShadow-var": {
          "$value": {
            "dark": "purple",
            "light": "black",
          },
        },
        "scaledSize-var": {
          "$description": "Scaled size",
          "$value": {
            "comfortable": "3px",
            "compact": "1px",
          },
        },
        "shadow-var": {
          "$value": {
            "dark": "brown",
            "light": "black",
          },
        },
        "small-var": {
          "$value": "1px",
        },
      },
    },
  },
  "tokens": {
    "boxShadow-var": {
      "$value": {
        "dark": "brown",
        "light": "grey",
      },
    },
    "buttonShadow-var": {
      "$value": {
        "dark": "black",
        "light": "grey",
      },
    },
    "lineShadow-var": {
      "$value": {
        "dark": "brown",
        "light": "grey",
      },
    },
    "scaledSize-var": {
      "$description": "Scaled size",
      "$value": {
        "comfortable": "3px",
        "compact": "1px",
      },
    },
    "shadow-var": {
      "$value": {
        "dark": "black",
        "light": "grey",
      },
    },
    "small-var": {
      "$value": "1px",
    },
  },
}
`;

exports[`getThemeJson > without contexts 1`] = `
{
  "contexts": {},
  "tokens": {
    "boxShadow-var": {
      "$value": {
        "dark": "brown",
        "light": "grey",
      },
    },
    "buttonShadow-var": {
      "$value": {
        "dark": "black",
        "light": "grey",
      },
    },
    "lineShadow-var": {
      "$value": {
        "dark": "brown",
        "light": "grey",
      },
    },
    "scaledSize-var": {
      "$value": {
        "comfortable": "3px",
        "compact": "1px",
      },
    },
    "shadow-var": {
      "$value": {
        "dark": "black",
        "light": "grey",
      },
    },
    "small-var": {
      "$value": "1px",
    },
  },
}
`;
